# hackathon_sber_SpbTechRun

./: .gitignore  README.md  SETUP_GUIDE.md  START.md  app.py  database.py  docker-compose.yml  init_db.py  knowledge_base.json  requirements.txt  run_life_situations.py  run_parser.py  scrapy.cfg
notebooks/: yazzh_api.py
server/: .dockerignore  Dockerfile  pyproject.toml
server/src/: main.py  prompts.yml  urban_advisor_graph
server/src/config/: Config.py
server/src/core/langgraph_multi_agent/: main.py  prompts.yml  state.py
server/src/core/langgraph_multi_agent/agents/clarification_agent/: __init__.py  graph.py  models.py  state.py
server/src/core/langgraph_multi_agent/agents/context_agent/: __init__.py  graph.py  state.py
server/src/core/langgraph_multi_agent/agents/conversational_agent/: __init__.py  graph.py  state.py
server/src/core/langgraph_multi_agent/agents/parser_agent/: __init__.py  graph.py  parser_graph.py  state.py  tools.py
server/src/core/langgraph_multi_agent/agents/retrieval_agent/: __init__.py  graph.py  retrieval_graph.py  state.py  tools.py
server/src/core/services/: BM25Service.py  LLMService.py  ParserService.py  QdrantService.py  ServiceManager.py  context_var.py  СhunksService.py
server/src/core/services/parser/: scrapy.cfg
server/src/endpoints/: document_upload_endpoint.py  rag_answer_endpoint.py
server/src/endpoints/api/: __init__.py  clear_base.py  health.py  info_base.py  rag_answer.py
server/src/endpoints/models/: knowledge_base_info.py  upload_response.py
server/src/utils/: logger.py  prompt_loader.py
(+84 files in other folders)
