[project]
name = "city-ai-assistant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PyMuPDF>=1.24.0",
    "graypy>=2.1.0",
    "PyYAML>=6.0.2",
    "openai>=1.108.0",
    "jinja2>=3.1.0",
    "qdrant_client>=1.15.1",
    "sentence_transformers>=5.1.0",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.20",
    "tiktoken>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.5",
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
    "loguru>=0.7.2",
    "bm25s>=0.2.0",
    "pymorphy3>=2.0.0",
    "langgraph>=0.2.66",
    "langchain-core>=0.3.29",
    "tavily-python>=0.5.0",
    "pydantic>=2.10.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
